# apodokimos

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG-WHITEPAPER.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-AGPL  README.md  SECURITY.md  TODO.md  WHITEPAPER.md  WHITEPAPER_v0.2.md  pnpm-workspace.yaml
.cargo/: config.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  deny.yml  fmt.yml  wp-placeholder-lint.yml  wp-version-check.yml
WHITEPAPER/: WHITEPAPER.md
crates/apodokimos-anchor/: Cargo.toml
crates/apodokimos-anchor/src/: lib.rs
crates/apodokimos-core/: CHANGELOG.md  Cargo.toml
crates/apodokimos-core/src/: claim.rs  error.rs  field.rs  governance.rs  lib.rs  version_doi.rs  voting.rs  weight.rs
crates/apodokimos-log/: Cargo.toml
crates/apodokimos-log/src/: client.rs  error.rs  lib.rs  merkle.rs  types.rs
crates/apodokimos-log/tests/: local_log.rs
demos/: flow-field.html
docs/: log-impl-decision.md
fields/: clinical-medicine-v0.1.json
governance/: genesis.toml  witnesses.toml
scripts/: quality-gate.sh
specs/: claim-model.json  governance.json  penalty-propagation.json  sbt-reputation.json  weight-function.json
