[workspace]
members = [
    "crates/apodokimos-core",
    "crates/apodokimos-chain",
    "crates/apodokimos-arweave",
    "crates/apodokimos-indexer",
    "crates/apodokimos-sdk",
    "crates/apodokimos-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Apodokimos Contributors"]
license = "AGPL-3.0"
repository = "https://github.com/apodokimos/apodokimos"
homepage = "https://apodokimos.org"
rust-version = "1.85"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
blake3 = { version = "1.5", default-features = false }

# Substrate (pinned version)
frame-support = { version = "31.0.0", default-features = false }
frame-system = { version = "31.0.0", default-features = false }
pallet-balances = { version = "31.0.0", default-features = false }
sp-core = { version = "31.0.0", default-features = false }
sp-runtime = { version = "34.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }

# Async / networking
tokio = { version = "1.35", default-features = false }
reqwest = { version = "0.11", default-features = false }

# Testing
proptest = "1.4"
