[workspace]
members = [
    "crates/apodokimos-core",
    "crates/apodokimos-log",
    # "crates/apodokimos-chain",     # TODO: Phase 3
    # "crates/apodokimos-arweave",   # TODO: Phase 4
    # "crates/apodokimos-indexer",   # TODO: Phase 5
    "crates/apodokimos-anchor",
    # "crates/apodokimos-sdk",       # TODO: Phase 6
    # "crates/apodokimos-cli",       # TODO: Phase 7
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Apodokimos Contributors"]
license = "AGPL-3.0-only"
repository = "https://github.com/apodokimos/apodokimos"
homepage = "https://apodokimos.org"
rust-version = "1.85"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "2.0"
blake3 = { version = "1.5", default-features = false }

# Substrate (pinned version)
frame-support = { version = "31.0.0", default-features = false }
frame-system = { version = "31.0.0", default-features = false }
pallet-balances = { version = "31.0.0", default-features = false }
sp-core = { version = "31.0.0", default-features = false }
sp-runtime = { version = "34.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }

# Async / networking
tokio = { version = "1.35", default-features = false, features = ["rt", "macros", "time", "sync", "rt-multi-thread", "fs"] }
reqwest = { version = "0.11", default-features = false }

# Crypto / transparency log
sha2 = { version = "0.10", default-features = false }
ed25519-dalek = { version = "2.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Testing
proptest = "1.4"
