[package]
name = "apodokimos-core"
version = "0.2.0"
edition = "2024"
authors = ["Apodokimos Contributors"]
license = "AGPL-3.0-only"
repository = "https://github.com/apodokimos/apodokimos"
description = "Core protocol types for Apodokimos Epistemic Contribution Graph"
rust-version = "1.85"

[dependencies]
thiserror = { version = "2.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
blake3 = { version = "1.5", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
proptest = { version = "1.5" }

[features]
default = ["std"]
std = ["thiserror/std", "serde/std", "serde_json/std", "blake3/std"]

